MDEV-14792 INSERT without column list into table with explicit versioning columns produces bad data