sql/table.h
@@ -1151,7 +1151,6 @@ public:
   Field **default_field;                /* Fields with non-constant DEFAULT */
   Field *next_number_field;		/* Set if next_number is activated */
   Field *found_next_number_field;	/* Set on open */
-  Field **vers_user_field;              /* Non-system fields */
   Virtual_column_info **check_constraints;
 
   /* Table's triggers, 0 if there are no of them */
@@ -1509,8 +1508,6 @@ public:
   bool prepare_triggers_for_update_stmt_or_event();
 
   Field **field_to_fill();
-  Field **vers_user_field_to_fill();
-  bool vers_update_user_field(MEM_ROOT *mem_root= NULL);
   bool validate_default_values_of_unset_fields(THD *thd) const;
 
   bool insert_all_rows_into_tmp_table(THD *thd, 
